--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,11 @@
         android:theme="@style/Theme.VisitPath"
         tools:targetApi="31">
 
+        <!-- Clave de API de Google Maps -->
+        <meta-data
+            android:name="com.google.android.maps.v2.API_KEY"
+            android:value="AIzaSyBRqF8SOEk36xfS8HWiFE5AJ2aIopQhTnE"/>
+
         <!-- Declaración de la actividad MonumentDetailActivity -->
         <activity android:name=".MonumentDetailActivity" />
 
