--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.VisitPath"
         tools:targetApi="31">
+        <activity android:name=".FavoritesActivity" />
 
         <!-- Clave de API de Google Maps -->
         <meta-data
