--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,9 @@
         android:theme="@style/Theme.VisitPath"
         tools:targetApi="31">
         <activity android:name=".FavoritesActivity" />
+        <activity android:name=".ItinerariesActivity" />
+        <activity android:name=".OptimizationActivity" />
+
 
         <!-- Clave de API de Google Maps -->
         <meta-data
